feat : [사원] 쿼리 스트링 안 보내고 조회시 null 에러 해결